<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/welcome_message" />

    <TextView android:id="@+id/roll_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roll_result"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="35dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/d4_roll_button"
            android:onClick="rollD4"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_button_text"
            android:onClick="rollD6"
            android:layout_row="1"
            android:layout_column="2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d8_roll_button"
            android:onClick="rollD8"
            android:layout_row="1"
            android:layout_column="3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d10_roll_button"
            android:onClick="rollD10"
            android:layout_row="1"
            android:layout_column="4"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d12_roll_button"
            android:onClick="rollD12"
            android:layout_row="2"
            android:layout_column="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d20_roll_button"
            android:onClick="rollD20"
            android:layout_row="2"
            android:layout_column="2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d100_roll_button"
            android:onClick="rollD100"
            android:layout_row="2"
            android:layout_column="3"/>

    </GridLayout>

 </LinearLayout>